# automating-mac-apps-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
grades/: SKILL_GRADES.md  group1_grades.md  group2_grades.md  group3_grades.md  group4_grades.md
plugins/automating-mac-apps-plugin/: .gitignore  README.md
plugins/automating-mac-apps-plugin/.claude-plugin/: marketplace.json  plugin.json
plugins/automating-mac-apps-plugin/agents/: README.md  contact-upsert-agent.md  csv-to-excel-agent.md  csv-to-numbers-agent.md  doc-to-deck-agent.md  meeting-end-agent.md  meeting-setup-agent.md  meeting-start-agent.md  sheet-convert-agent.md  sheet-report-agent.md
plugins/automating-mac-apps-plugin/commands/: README.md  contact-upsert.md  csv-to-excel.md  csv-to-numbers.md  doc-to-deck.md  excel-to-numbers.md  meeting-end.md  meeting-setup.md  meeting-start.md  numbers-to-excel.md  sheet-report.md
plugins/automating-mac-apps-plugin/skills/automating-calendar/: SKILL.md
plugins/automating-mac-apps-plugin/skills/automating-chrome/: SKILL.md
tests/: README.md  cleanup_integration_test_data.py  conftest.py  create_integration_test_data.py  pytest.ini  requirements-test.txt
tests/integration_tests/: test_calendar_integration.py  test_excel_integration.py  test_integration_smoke.py  test_keynote_integration.py  test_mail_integration.py  test_numbers_integration.py
tests/test_automating_calendar/: test_create_calendar_event.py
tests/test_automating_notes/: test_create_note.py
(+16 files in other folders)
